dded style for search persons component

--- a/apps/ux-films-finder/src/app/components/card/card.component.html
+++ b/apps/ux-films-finder/src/app/components/card/card.component.html
@@ -1,6 +1,18 @@
 <div class="card">
   <img class="card__img" [src]="url" />
   <div class="card__name">{{ name }}</div>
-  <div class="card__rating">{{ rating }}</div>
-  <div class="card__gender">{{ gender }}</div>
+  <div class="card__rating" *ngIf="rating > 0">{{ rating }}</div>
+  <ng-container
+    class="card__gender"
+    *ngIf="gender === 'FEMALE'; else maleTemplate"
+  >
+    <div class="card__gender _icon _female">
+      <mat-icon>female</mat-icon>
+    </div>
+  </ng-container>
+  <ng-template #maleTemplate>
+    <div class="card__gender _icon _male">
+      <mat-icon>male</mat-icon>
+    </div>
+  </ng-template>
 </div>
