--- a/apps/ux-films-finder/src/app/components/card/card.component.less
+++ b/apps/ux-films-finder/src/app/components/card/card.component.less
@@ -20,7 +20,8 @@
     background-color: @color-white-ff;
     border-radius: 1px;
   }
-  &__rating {
+  &__rating,
+  &__gender {
     display: flex;
     position: absolute;
     align-items: center;
