--- a/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.html
+++ b/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.html
@@ -33,6 +33,7 @@
           class="search-person__list _card"
           [name]="person?.nameRu ? person.nameRu : person.nameEn"
           [url]="person?.posterUrl ? person.posterUrl : ''"
+          [gender]="person?.sex ? person.sex : ''"
         ></ff-card>
       </a>
     </ng-container>
