--- a/apps/ux-films-finder/src/assets/styles/themes/dark/common/colors.less
+++ b/apps/ux-films-finder/src/assets/styles/themes/dark/common/colors.less
@@ -6,6 +6,10 @@
 
 @color-gray-42: #424242;
 
+@color-gray-0E: #E0E1E3;
+
 @color-white-ff: #ffffff;
 
 @color-green-69: #69f0ae;
+
+@color-green-04: #048E4B;
