--- a/apps/ux-films-finder/src/assets/styles/themes/base/common/colors.less
+++ b/apps/ux-films-finder/src/assets/styles/themes/base/common/colors.less
@@ -3,3 +3,9 @@
 @color-gray-66: #666666;
 
 @color-white-ff: #ffffff;
+
+@color-blue-27: #274879;
+
+@color-pink-cb:  #CB4A78;
+
+@color-green-69: #69f0ae;
