--- a/apps/ux-films-finder/src/app/components/footer/footer.component.html
+++ b/apps/ux-films-finder/src/app/components/footer/footer.component.html
@@ -1,29 +1,28 @@
-<!-- <tag class="block-name__element _modifier1 _modifier2"> -->
 <footer class="footer">
   <div class="footer__navigation">
     <div class="footer__navigation-block">
-      <a href="#" class="footer__link">Фильмы</a>
-      <a href="#" class="footer__link">Мультфильмы</a>
-      <a href="#" class="footer__link">Сериалы</a>
-      <a href="#" class="footer__link">Детские программы</a>
+      <a routerLink="/search-films" class="footer__link">Фильмы</a>
+      <a routerLink="/cartoon" class="footer__link">Мультфильмы</a>
+      <a routerLink="/not-found" class="footer__link">Сериалы</a>
+      <a routerLink="/for-children" class="footer__link">Детские программы</a>
     </div>
     <div class="footer__navigation-block">
-      <a href="#" class="footer__link">Боевики</a>
-      <a href="#" class="footer__link">Комедии</a>
-      <a href="#" class="footer__link">Фэнтези</a>
-      <a href="#" class="footer__link">Триллеры</a>
+      <a routerLink="/action" class="footer__link">Боевики</a>
+      <a routerLink="/comedy" class="footer__link">Комедии</a>
+      <a routerLink="/fantasy" class="footer__link">Фэнтези</a>
+      <a routerLink="/thriller" class="footer__link">Триллеры</a>
     </div>
     <div class="footer__navigation-block">
-      <a href="#" class="footer__link">Новости</a>
-      <a href="#" class="footer__link">Спорт</a>
-      <a href="#" class="footer__link">Live TV</a>
-      <a href="#" class="footer__link">Стриминговый сервис</a>
+      <a routerLink="/news" class="footer__link">Новости</a>
+      <a routerLink="/family" class="footer__link">Для всей семьи</a>
+      <a routerLink="/not-found" class="footer__link">Live TV</a>
+      <a routerLink="/show" class="footer__link">Телешоу</a>
     </div>
     <div class="footer__navigation-block">
-      <a href="#" class="footer__link">Премиум</a>
-      <a href="#" class="footer__link">Помощь</a>
-      <a href="#" class="footer__link">Свяжитесь с нами</a>
-      <a href="#" class="footer__link">Оставить отзыв</a>
+      <a routerLink="/adventure" class="footer__link">Приключения</a>
+      <a routerLink="/drama" class="footer__link">Драма</a>
+      <a routerLink="/romance" class="footer__link">Мелодрама</a>
+      <a routerLink="/horror" class="footer__link">Хоррор</a>
     </div>
   </div>
   <div class="footer__credits">
@@ -34,162 +33,29 @@
       Terms Privacy CA Privacy Copyright Cookies
     </p>
     <div class="footer__media-icons">
-      <svg
-        class="footer__svg-icon"
-        version="1.1"
-        id="Capa_1"
-        xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink"
-        x="0px"
-        y="0px"
-        width="32px"
-        height="32px"
-        viewBox="0 0 512 512"
-        style="enable-background: new 0 0 512 512"
-        xml:space="preserve"
-      >
-        <g>
+      <svg class="footer__svg-icon" viewBox="0 0 548 548">
+        <path
+          d="M448 64H64C29 64 0 93 0 128v256c0 35 29 64 64 64h384c35 0 64-29 64-64V128c0-35-29-64-64-64zM343 235l135-116 2 9v256l-1 6-136-155zM448 96l6 1-198 170L58 97l6-1h384zM33 390l-1-6V128l2-9 135 116L33 390zm31 26-9-2 139-158 52 44a16 16 0 0 0 20 0l52-44 139 158-9 2H64z"
+        />
+      </svg>
+      <svg class="footer__svg-icon" viewBox="0 0 548 548">
+        <path
+          d="m545 400-1-3c-10-17-28-38-55-63l-1-1v-1c-13-11-20-19-23-23-6-8-8-15-4-23 2-6 10-18 25-37l19-25c33-43 47-71 43-84l-2-3c-1-1-4-3-9-4-5-2-11-2-18-1l-82 1h-6l-4 1h-1l-1 1-4 3-2 5a466 466 0 0 1-65 114l-11 10c-3 3-6 4-8 3l-4-1-7-7c-1-3-3-7-3-11a123 123 0 0 1-1-25 424 424 0 0 0 1-36 4097 4097 0 0 1 0-49l-3-9-6-7-10-4c-10-2-23-3-38-3-36-1-58 2-68 7l-11 8c-4 4-4 7-2 7 12 2 20 6 25 12l1 4a133 133 0 0 1 7 34 222 222 0 0 1-7 72l-3 6-2 2-7 1c-3 0-6-1-10-4l-12-11-14-19-16-30-4-8a712 712 0 0 1-25-53c-2-4-4-7-7-9l-1-1-5-3-6-2-79 1c-8 0-13 2-16 5l-1 2-1 5 2 7a942 942 0 0 0 130 216l8 7 20 16c9 7 18 13 29 19a160 160 0 0 0 79 20h33c7-1 12-3 15-6l1-2 3-5 1-8c-1-8 0-15 1-22l5-15a36 36 0 0 1 11-12l3-1c4-2 10 0 16 4 6 5 12 10 17 17a507 507 0 0 0 40 40l5 3c4 3 9 5 15 7s12 2 16 1l73-1c8 0 13-1 17-4 4-2 7-5 7-7v-10l-2-8z"
+        />
+      </svg>
+      <svg class="footer__svg-icon" viewBox="0 0 128 128">
+        <path fill="none" d="M0 0h128v128H0z" />
+        <path
+          d="M68 128H7c-4 0-7-3-7-7V7c0-4 3-7 7-7h114c4 0 7 3 7 7v114c0 4-3 7-7 7H88V78h17l2-19H88V47c0-6 2-10 10-10h10V20l-15-1c-15 0-25 9-25 26v14H52v19h16v50z"
+          clip-rule="evenodd"
+        />
+      </svg>
+      <svg class="footer__svg-icon" viewBox="0 0 128 128">
+        <g clip-rule="evenodd">
+          <path fill="none" d="M0 0h128v128H0z" />
           <path
-            d="M448,64H64C28.656,64,0,92.656,0,128v256c0,35.344,28.656,64,64,64h384c35.344,0,64-28.656,64-64V128
-		C512,92.656,483.344,64,448,64z M342.656,234.781l135.469-116.094c0.938,3,1.875,6,1.875,9.313v256
-		c0,2.219-0.844,4.188-1.281,6.281L342.656,234.781z M448,96c2.125,0,4,0.813,6,1.219L256,266.938L58,97.219
-		C60,96.813,61.875,96,64,96H448z M33.266,390.25C32.828,388.156,32,386.219,32,384V128c0-3.313,0.953-6.313,1.891-9.313
-		L169.313,234.75L33.266,390.25z M64,416c-3.234,0-6.172-0.938-9.125-1.844l138.75-158.563l51.969,44.531
-		C248.578,302.719,252.297,304,256,304s7.422-1.281,10.406-3.875l51.969-44.531l138.75,158.563C454.188,415.062,451.25,416,448,416
-		H64z"
+            d="m128 23-15 5c5-4 10-9 11-15-5 3-10 5-16 6-5-5-12-8-19-8a27 27 0 0 0-26 33C41 43 22 32 9 16a27 27 0 0 0 8 36L5 48v1c0 13 9 23 21 26a25 25 0 0 1-12 0c4 11 13 19 25 19a52 52 0 0 1-39 11 75 75 0 0 0 115-64v-4c5-4 9-8 13-14"
           />
-        </g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-      </svg>
-      <svg
-        class="footer__svg-icon"
-        version="1.1"
-        id="Capa_1"
-        xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink"
-        x="0px"
-        y="0px"
-        width="32px"
-        height="32px"
-        viewBox="0 0 548.358 548.358"
-        style="enable-background: new 0 0 548.358 548.358"
-        xml:space="preserve"
-      >
-        <g>
-          <path
-            d="M545.451,400.298c-0.664-1.431-1.283-2.618-1.858-3.569c-9.514-17.135-27.695-38.167-54.532-63.102l-0.567-0.571
-		l-0.284-0.28l-0.287-0.287h-0.288c-12.18-11.611-19.893-19.418-23.123-23.415c-5.91-7.614-7.234-15.321-4.004-23.13
-		c2.282-5.9,10.854-18.36,25.696-37.397c7.807-10.089,13.99-18.175,18.556-24.267c32.931-43.78,47.208-71.756,42.828-83.939
-		l-1.701-2.847c-1.143-1.714-4.093-3.282-8.846-4.712c-4.764-1.427-10.853-1.663-18.278-0.712l-82.224,0.568
-		c-1.332-0.472-3.234-0.428-5.712,0.144c-2.475,0.572-3.713,0.859-3.713,0.859l-1.431,0.715l-1.136,0.859
-		c-0.952,0.568-1.999,1.567-3.142,2.995c-1.137,1.423-2.088,3.093-2.848,4.996c-8.952,23.031-19.13,44.444-30.553,64.238
-		c-7.043,11.803-13.511,22.032-19.418,30.693c-5.899,8.658-10.848,15.037-14.842,19.126c-4,4.093-7.61,7.372-10.852,9.849
-		c-3.237,2.478-5.708,3.525-7.419,3.142c-1.715-0.383-3.33-0.763-4.859-1.143c-2.663-1.714-4.805-4.045-6.42-6.995
-		c-1.622-2.95-2.714-6.663-3.285-11.136c-0.568-4.476-0.904-8.326-1-11.563c-0.089-3.233-0.048-7.806,0.145-13.706
-		c0.198-5.903,0.287-9.897,0.287-11.991c0-7.234,0.141-15.085,0.424-23.555c0.288-8.47,0.521-15.181,0.716-20.125
-		c0.194-4.949,0.284-10.185,0.284-15.705s-0.336-9.849-1-12.991c-0.656-3.138-1.663-6.184-2.99-9.137
-		c-1.335-2.95-3.289-5.232-5.853-6.852c-2.569-1.618-5.763-2.902-9.564-3.856c-10.089-2.283-22.936-3.518-38.547-3.71
-		c-35.401-0.38-58.148,1.906-68.236,6.855c-3.997,2.091-7.614,4.948-10.848,8.562c-3.427,4.189-3.905,6.475-1.431,6.851
-		c11.422,1.711,19.508,5.804,24.267,12.275l1.715,3.429c1.334,2.474,2.666,6.854,3.999,13.134c1.331,6.28,2.19,13.227,2.568,20.837
-		c0.95,13.897,0.95,25.793,0,35.689c-0.953,9.9-1.853,17.607-2.712,23.127c-0.859,5.52-2.143,9.993-3.855,13.418
-		c-1.715,3.426-2.856,5.52-3.428,6.28c-0.571,0.76-1.047,1.239-1.425,1.427c-2.474,0.948-5.047,1.431-7.71,1.431
-		c-2.667,0-5.901-1.334-9.707-4c-3.805-2.666-7.754-6.328-11.847-10.992c-4.093-4.665-8.709-11.184-13.85-19.558
-		c-5.137-8.374-10.467-18.271-15.987-29.691l-4.567-8.282c-2.855-5.328-6.755-13.086-11.704-23.267
-		c-4.952-10.185-9.329-20.037-13.134-29.554c-1.521-3.997-3.806-7.04-6.851-9.134l-1.429-0.859c-0.95-0.76-2.475-1.567-4.567-2.427
-		c-2.095-0.859-4.281-1.475-6.567-1.854l-78.229,0.568c-7.994,0-13.418,1.811-16.274,5.428l-1.143,1.711
-		C0.288,140.146,0,141.668,0,143.763c0,2.094,0.571,4.664,1.714,7.707c11.42,26.84,23.839,52.725,37.257,77.659
-		c13.418,24.934,25.078,45.019,34.973,60.237c9.897,15.229,19.985,29.602,30.264,43.112c10.279,13.515,17.083,22.176,20.412,25.981
-		c3.333,3.812,5.951,6.662,7.854,8.565l7.139,6.851c4.568,4.569,11.276,10.041,20.127,16.416
-		c8.853,6.379,18.654,12.659,29.408,18.85c10.756,6.181,23.269,11.225,37.546,15.126c14.275,3.905,28.169,5.472,41.684,4.716h32.834
-		c6.659-0.575,11.704-2.669,15.133-6.283l1.136-1.431c0.764-1.136,1.479-2.901,2.139-5.276c0.668-2.379,1-5,1-7.851
-		c-0.195-8.183,0.428-15.558,1.852-22.124c1.423-6.564,3.045-11.513,4.859-14.846c1.813-3.33,3.859-6.14,6.136-8.418
-		c2.282-2.283,3.908-3.666,4.862-4.142c0.948-0.479,1.705-0.804,2.276-0.999c4.568-1.522,9.944-0.048,16.136,4.429
-		c6.187,4.473,11.99,9.996,17.418,16.56c5.425,6.57,11.943,13.941,19.555,22.124c7.617,8.186,14.277,14.271,19.985,18.274
-		l5.708,3.426c3.812,2.286,8.761,4.38,14.853,6.283c6.081,1.902,11.409,2.378,15.984,1.427l73.087-1.14
-		c7.229,0,12.854-1.197,16.844-3.572c3.998-2.379,6.373-5,7.139-7.851c0.764-2.854,0.805-6.092,0.145-9.712
-		C546.782,404.25,546.115,401.725,545.451,400.298z"
-          />
-        </g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-        <g></g>
-      </svg>
-      <svg
-        class="footer__svg-icon"
-        enable-background="new 0 0 128 128"
-        id="Social_Icons"
-        version="1.1"
-        width="32px"
-        height="32px"
-        viewBox="0 0 128 128"
-        xml:space="preserve"
-        xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink"
-      >
-        <g id="_x31__stroke">
-          <g id="Facebook_1_">
-            <rect fill="none" height="128" width="128" />
-            <path
-              class="footer__svg-icon-in-path"
-              clip-rule="evenodd"
-              d="M68.369,128H7.065C3.162,128,0,124.836,0,120.935    V7.065C0,3.162,3.162,0,7.065,0h113.871C124.837,0,128,3.162,128,7.065v113.87c0,3.902-3.163,7.065-7.064,7.065H88.318V78.431    h16.638l2.491-19.318H88.318V46.78c0-5.593,1.553-9.404,9.573-9.404l10.229-0.004V20.094c-1.769-0.235-7.841-0.761-14.906-0.761    c-14.749,0-24.846,9.003-24.846,25.535v14.246H51.688v19.318h16.681V128z"
-              id="Facebook"
-            />
-          </g>
-        </g>
-      </svg>
-      <svg
-        class="footer__svg-icon"
-        enable-background="new 0 0 128 128"
-        id="Social_Icons"
-        version="1.1"
-        viewBox="0 0 128 128"
-        xml:space="preserve"
-        xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink"
-      >
-        <g id="_x37__stroke">
-          <g id="Twitter">
-            <rect
-              clip-rule="evenodd"
-              fill="none"
-              fill-rule="evenodd"
-              height="128"
-              width="128"
-            />
-            <path
-              clip-rule="evenodd"
-              d="M128,23.294    c-4.703,2.142-9.767,3.59-15.079,4.237c5.424-3.328,9.587-8.606,11.548-14.892c-5.079,3.082-10.691,5.324-16.687,6.526    c-4.778-5.231-11.608-8.498-19.166-8.498c-14.493,0-26.251,12.057-26.251,26.927c0,2.111,0.225,4.16,0.676,6.133    C41.217,42.601,21.871,31.892,8.91,15.582c-2.261,3.991-3.554,8.621-3.554,13.552c0,9.338,4.636,17.581,11.683,22.412    c-4.297-0.131-8.355-1.356-11.901-3.359v0.331c0,13.051,9.053,23.937,21.074,26.403c-2.201,0.632-4.523,0.948-6.92,0.948    c-1.69,0-3.343-0.162-4.944-0.478c3.343,10.694,13.035,18.483,24.53,18.691c-8.986,7.227-20.315,11.533-32.614,11.533    c-2.119,0-4.215-0.123-6.266-0.37c11.623,7.627,25.432,12.088,40.255,12.088c48.309,0,74.717-41.026,74.717-76.612    c0-1.171-0.023-2.342-0.068-3.49C120.036,33.433,124.491,28.695,128,23.294"
-              fill-rule="evenodd"
-              id="Twitter_1_"
-            />
-          </g>
         </g>
       </svg>
     </div>
