--- a/apps/ux-films-finder/src/app/components/banner/banner.component.less
+++ b/apps/ux-films-finder/src/app/components/banner/banner.component.less
@@ -7,6 +7,7 @@
   justify-content: center;
   max-height: 100vh;
 }
+
 .keen-slider {
   width: 1442px;
   height: 496px;
@@ -15,87 +16,94 @@
   border-left: 50px solid transparent;
   border-right: 50px solid transparent;
 }
+
 .banner {
-  width: 100%;
-  height: 100%;
+  width: 1215px;
+  height: 496px;
   background: black;
   display: flex;
 }
+
 .banner-name {
-  width: 40%;
-  height: 100%;
+  width: 445px;
+  height: 496px;
+  padding-left: 108px;
 }
+
 .nameRu {
-  width: 70%;
-  margin-top: 18%;
-  margin-bottom: 9%;
-  margin-left: 22%;
+  width: 305px;
+  margin-top: 90px;
+  margin-bottom: 85px;
   font-size: 35px;
   font-weight: bold;
   color: white;
   line-height: 1.5;
 }
+
 .nameEn {
-  width: 40%;
-  margin-bottom: 6%;
-  margin-left: 22%;
+  margin-bottom: 60px;
   color: rgb(167, 167, 167);
-  font-size: 18px;
-}
-.genres {
-  width: 75%;
-  margin-left: 22%;
-  color: white;
   font-size: 19px;
-  line-height: 2.5;
+}
+
+.genres {
+  width: 305px;
+  color: white;
+  font-size: 16px;
+  line-height: 2.2;
   word-spacing: 0.5em;
+  text-transform: capitalize;
 }
 
 .poster {
-  width: 25%;
-  height: 100%;
+  width: 320px;
+  height: 496px;
+  display: flex;
 }
+
 .posterUrl img {
-  margin-top: 10%;
-  margin-bottom: 10;
-  width: 100%;
+  margin-top: 25px;
+  width: 300px;
   height: 90%;
-  background-size: 30% 100%;
 }
 
 .description {
-  width: 35%;
-  height: 100%;
-  margin-top: 7%;
+  width: 340px;
+  height: 496px;
+  margin-top: 80px;
   line-height: 2;
+  margin-left: 4px;
 }
 
 .description p {
-  display: inline-block;
-  margin-left: 14%;
-  height: 20%;
+  height: 35px;
   color: rgb(167, 167, 167);
-  font-size: 15px;
+  font-size: 14px;
+  text-align: left;
 }
-.rating {
-  margin-right: 10%;
-  color: white;
-  font-size: 16px;
+.description table {
+  width: 265px;
+  //border: 1px solid white;
 }
-.filmLength {
-  margin-right: 10%;
-  color: white;
-  font-size: 16px;
+tr {
+  width: 200px;
 }
-.countries {
-  margin-right: 10%;
+
+td {
   color: white;
-  font-size: 16px;
 }
-.year {
-  margin-right: 10%;
-  color: white;
-  font-size: 16px;
+
+.rating-icon {
+  background: #ffffff;
+  border-radius: 16px;
+  padding: 0px 12px 0px 12px;
+  color: black;
+  font-size: 17px;
+}
+
+.information {
+  text-align: right;
+  word-spacing: 60px;
 }
 
 .navigation-wrapper {
